--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
 </head>
 <body>
 <div class="hero">
-
+    <nav>
+        <img src="images/logo.png" class="logo">
+        <ul>
+            <li><a href="">HOME</a></li>
+            <li><a href="">ABOUT</a></li>
+            <li><a href="">PORTFOLIO</a></li>
+            <li><a href="">SERVICES</a></li>
+            <li><a href="">HIRE ME</a></li>
+        </ul>
+    </nav>
 </div>
 
 </body>
