--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
             <li><a href="">HIRE ME</a></li>
         </ul>
     </nav>
+
+    <div class="info">
+        <h1>I'm <span>Anna</span> Johnson</h1>
+        <p>This is my official portfolio website to showcase my all works related to web development<br>and UI design.</p>
+        <a href="">Download CV</a>
+    </div>
 </div>
 
 </body>
