--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
         <p>This is my official portfolio website to showcase my all works related to web development<br>and UI design.</p>
         <a href="">Download CV</a>
     </div>
+
+    <div class="img-box">
+        <img src="images/pattern.png" class="back-img">
+        <img src="images/girl.png" class="main-img">
+    </div>
 </div>
 
 </body>
