--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
 <body>
 <div class="hero">
@@ -30,6 +31,12 @@
     <div class="img-box">
         <img src="images/pattern.png" class="back-img">
         <img src="images/girl.png" class="main-img">
+    </div>
+
+    <div class="social-links">
+        <a href=""><i class="fab fa-linkedin-in"></i></a>
+        <a href=""><i class="fab fa-behance"></i></a>
+        <a href=""><i class="fab fa-dribbble"></i></a>
     </div>
 </div>
 
