--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <li><a href="">SERVICES</a></li>
             <li><a href="">HIRE ME</a></li>
         </ul>
+        <img src="images/moon.png" id="icon">
     </nav>
 
     <div class="info">
