--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 
     <div class="info">
         <h1>I'm <span>Anna</span> Johnson</h1>
-        <p>This is my official portfolio website to showcase my all works related to web development<br>and UI design.</p>
+        <p>This is my official portfolio website to showcase my all works related to web development<br>and UI design.
+        </p>
         <a href="">Download CV</a>
     </div>
 
@@ -41,5 +42,6 @@
     </div>
 </div>
 
+<script src="script.js"></script>
 </body>
 </html>
